minimal mobile styles featured-casestudies

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -32,6 +32,7 @@
   justify-content: space-between;
   padding: 24px 24px 0 24px;
   .exhibitions--wrap {
+    cursor: pointer;
     display: flex;
     #exhibitions {
       margin-right: 16px;
