--- a/src/styles/components/_casestudy-featured.scss
+++ b/src/styles/components/_casestudy-featured.scss
@@ -1,6 +1,14 @@
 div.casestudy-featured {
-  height: 300px;
   // background-color:$black;
+  padding: 14.4vw 6.4vw 0 6.4vw;
   color: $white;
-  padding-top: 3.2rem;
+  span.hero--wrap {
+    
+  }
+  .casestudy-featured__hero {
+    width: 100%;
+  }
+  .casestudy-featured__title {
+    padding-top: 16px;
+  }
 }
