--- a/src/styles/components/_casestudy-featured.scss
+++ b/src/styles/components/_casestudy-featured.scss
@@ -1,14 +1,13 @@
 .homepage__casestudies-featured {
+  padding: 0 6.4vw 14.4vw 6.4vw;
   background-color: $black;
   color: $white;
-  padding-bottom:14.4vw;
   position: relative;
   z-index: 3;
 }
 
 div.casestudy-featured {
-  // background-color:$black;
-  padding: 14.4vw 6.4vw 0 6.4vw;
+  padding-top: 14.4vw;
   color: $white;
   p {
     @include label(inherit);
@@ -16,9 +15,9 @@ div.casestudy-featured {
   .casestudy-featured__hero {
     width: 100%;
   }
-  .casestudy-featured__title {
-    padding: 16px 0 10px 0;
-  }
+}
+.casestudy-featured__title {
+  padding: 16px 0 10px 0;
 }
 
 @include media-min($ipad) {
@@ -26,6 +25,7 @@ div.casestudy-featured {
     padding: 7vw 6.4vw;
   }
   .casestudy-featured--grid {
+    padding-top: 0;
     display: grid;
     grid-row-gap: 7vw;
     grid-template-columns: repeat(2, 1fr);
@@ -35,7 +35,28 @@ div.casestudy-featured {
       padding: 0;
     }
   }
+}
+ 
+@include media-min($ipad-pro) {
+  .homepage__casestudies-featured {
+    padding: 10vw 10vw;
+  }
+  .casestudy-featured--grid {
+    grid-column-gap: 10vw;
+  }
   .grid--wide {
-     grid-column: 1 / span 2; 
+    grid-column: 1 / span 2; 
+ } 
+}
+
+@include media-min($desktop) {
+  .casestudy-featured__title {
+    padding: 24px 0 10px 0;
+  }
+}
+
+@include media-min(1680px) {
+  .homepage__casestudies-featured {
+    padding: 10vw 14vw;
   }
 }
