--- a/src/styles/base/_animations.scss
+++ b/src/styles/base/_animations.scss
@@ -47,14 +47,17 @@
     opacity: 1;
   }
 }
-
-.parallax {
+//home page parallax
+.--parallax {
   // transform: translate3d(0px, -98vh, 1px) scale(.5);
-  transform: translateZ(-1px) scale(1.5);
-  -webkit-transform: translateZ(-1px) scale(1.5);
-  transform-origin: center;
-  -webkit-transform-origin: center;
-  z-index: -1;
+  @include media-min($desktop) {
+    transform: translateZ(-1px) scale(1.5);
+    -webkit-transform: translateZ(-1px) scale(1.5);
+    transform-origin: center;
+    -webkit-transform-origin: center;
+    z-index: -1;
+  }
+  
 }
 
 .parallax--wrap {
