updated casestudy header slice styles

--- a/src/styles/components/slices/_header_slice.scss
+++ b/src/styles/components/slices/_header_slice.scss
@@ -12,20 +12,38 @@
     }
   }
   @include entire-viewport;
-  .header--info {
-    max-width: 87.2vw;
-    padding: 12.8vw 6.4vw;
-    :first-child {
-      padding-bottom: 24px;
+  .header-slice__info {
+    padding: 6.25vw;
+  #XGb4LBEAAB8AbT4j--titleCopy {
+      padding-bottom: 32px;
+    }
+  }
+}
+@include media-min($ipad-pro) {
+  .casestudy__header {
+    .header-slice__info {
+      padding: 48px;
+    }
+  }
+}
+@include media-orientation($ipad-pro, 1279px, landscape) {
+  .casestudy__header {
+    .header-slice__info {
+      width: 56%;
     }
   }
 }
 @include media-min($desktop) {
   .casestudy__header {
-    .header--info {
-      max-width: 50vw;
-      padding: 3.33vw;
+    .header-slice__info {
+      width: 56%;
     } 
   }
-  
+}
+@include media-min($desktop-xl) {
+  .casestudy__header {
+    .header-slice__info {
+      padding: 56px;
+    }
+  }
 }
