--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -7,6 +7,8 @@ $desktop: 1280px;
 $ipad-landscape: 1366px;
 $desktop-lrg: 1440px;
 $desktop-xl: 1680px;
+$desktop-xxl: 1920px;
+$desktop-mega: 2560px;
 
 //COLORS
 
