added location info & title component styles

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -28,7 +28,7 @@ nav.nav {
   @include flexbox;
   justify-content: space-between;
   padding: 24px 6.25vw;
-  
+  align-items: center;
 }
 
 .nav__logo {
