--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,6 +18,8 @@
 //SLICES--------------------
 @import './components/slices/gallery';
 @import './components/slices/header_slice';
+@import './components/slices/location_info_slice';
+@import './components/slices/title_slice';
 @import './components/slices/body_text_slice';
 @import './components/slices/pull_quote_slice';
 @import './components/slices/media_general_slices';
