--- a/src/styles/components/slices/_body_text_slice.scss
+++ b/src/styles/components/slices/_body_text_slice.scss
@@ -1,3 +1,5 @@
+
+//.--narrow is the default for body-copy
 .body-copy{
   @include body-copy(inherit);
   @include text-vertical-rhythm;
@@ -5,33 +7,63 @@
   padding-left: 6.25vw;
   white-space:pre-line;
 }
-@include media-min($desktop) {
-  .body-copy{
-    padding: 16.667vw 16vw 0 16vw;
-    max-width: 600px;
-  }
-  .body-copy--flex {
-    display: flex;
-    width: 100%;
-    &.--center {
-      justify-content: center;
+@include media-min($ipad) {
+  .body-copy {
+    padding-right: 12.5vw;
+    padding-left: 12.5vw;
+    &.--left {   
+        padding-right: 25vw;
     }
+    &.--right {   
+        padding-left: 25vw;
+    }
+  }
+}
+@include media-min($ipad-pro) {
+  .body-copy {
+    padding-left: 29.167vw;
+    padding-right: 29.167vw;
     &.--left {
-
+      padding-left: 16.6667vw;
+      padding-right: 41.6667vw;
     }
     &.--right {
-     flex-direction: row-reverse;
+      padding-left: 41.6667vw;
+      padding-right: 16.6667vw;
     }
     &.--two-column {
-      .body-copy {
-        width: 84vw;
-        column-count: 2;
-        column-gap: 48px;
-        max-width: 84vw;
-      }
+      padding-left: 16.6667vw;
+      padding-right: 16.6667vw;
     }
     &.--wide {
-      width: 50vw;
+      padding-left: 16.6667vw;
+      padding-right: 16.6667vw;
+    }
+  }
+}
+@include media-min($desktop) {
+  .body-copy {
+    &.--two-column {
+      column-count: 2;
+      column-gap: 4.1665vw;
+    }
+  }
+}
+@include media-min($desktop-xxl) {
+  .body-copy {
+    padding-left: 33.333vw;
+    padding-right: 33.333vw;
+    &.--right {
+      padding-left: 50vw;
+      padding-right: 16.6667vw;
+    }
+    &.--left {
+      padding-left: 16.6667vw;
+      padding-right: 50vw;
+    }
+    &.--wide {
+      padding-left: 25vw;
+      padding-right: 25vw;
     }
   }
 }
