--- a/src/styles/components/slices/_media_general_slices.scss
+++ b/src/styles/components/slices/_media_general_slices.scss
@@ -1,5 +1,5 @@
 .media {
-  padding-top: 34.133vw;
+  @include media-vertical-rhythm;
   img, video{
     width: 100%;
   }
@@ -42,9 +42,8 @@
   }
 }
 .media--narrow {
-  padding-left: 20vw;
-  padding-right: 20vw;
-  width: 60vw;
+  padding-left: 25vw;
+  padding-right: 25vw;
 }
 
 //click-vid-module
@@ -53,9 +52,25 @@ div.video-player > div {
 }
 
 //mediaqueries---------------------------------
+@include media-min($ipad-pro) {
+  .media--narrow {
+    padding-left: 29.1667vw;
+    padding-right: 29.16667vw;
+  }
+}
+@include media-min($desktop-xxl) {
+  .media--narrow {
+    padding-left: 33.3333vw;
+    padding-right: 33.3333vw;
+  }
+}
+
+
+
+
+
 @include media-min($desktop) {
   .media {
-    padding-top: 16.67vw;
     &.autoplay-hero {
       padding: 0;
       video {
@@ -73,12 +88,90 @@ div.video-player > div {
         height: 42.4vw;
     }
   }
-  .media--narrow {
-    padding-left: 28vw;
-    padding-right: 28vw;
-    width: 44vw;
-  }
 }
+
+
+// .media {
+//   padding-top: 34.133vw;
+//   img, video{
+//     width: 100%;
+//   }
+//   &.autoplay-hero {
+//     padding: 0;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     @include entire-viewport;
+//     padding: 0;
+//     video {
+//       flex-shrink: 0;
+//       height: 100%;
+//       width: auto;
+//     }
+//   }
+//   &.homepage-header__vid {
+//     padding: 0;
+//     display: flex;
+//     justify-content: center;
+//     video {
+//       min-height: 100vh;
+//       flex-shrink: 0;
+//       object-fit: cover;
+//     }
+//   }
+// }
+// .media--wide {
+//   padding-left: 8vw; 
+//   padding-right: 8vw;
+//   width: 84vw;
+//   &.video-player--wrap {
+//     height: 44.52vw;
+//   }
+// }
+// .media--fullwidth {
+//   width: 100vw;
+//   &.video-player--wrap {
+//     height: 53vw;
+//   }
+// }
+// .media--narrow {
+//   padding-left: 20vw;
+//   padding-right: 20vw;
+//   width: 60vw;
+// }
+
+// //click-vid-module
+// div.video-player > div {
+//   background: transparent !important;
+// }
+
+// //mediaqueries---------------------------------
+// @include media-min($desktop) {
+//   .media {
+//     padding-top: 16.67vw;
+//     &.autoplay-hero {
+//       padding: 0;
+//       video {
+//         min-width: 100%;
+//         height: auto;
+//         min-height: 100%;
+//       }
+//     }
+//   }
+//   .media--wide {
+//     padding-left: 10vw;
+//     padding-right: 10vw;
+//     width: 80vw;
+//     &.video-player--wrap {
+//         height: 42.4vw;
+//     }
+//   }
+//   .media--narrow {
+//     padding-left: 28vw;
+//     padding-right: 28vw;
+//     width: 44vw;
+//   }
+// }
 
 
 
