--- a/src/styles/components/slices/_image_dyptich.scss
+++ b/src/styles/components/slices/_image_dyptich.scss
@@ -1,38 +1,38 @@
 .dyptich {
-  padding: 34.133vw 8vw 0 8vw;
+  @include media-vertical-rhythm;
+  padding-left: 25vw;
+  padding-right: 25vw;
 }
-
 .dyptich__image {
-  width: 84vw;
   &.left {
-    padding-bottom: 96px;
-  }
-  &.right {
-    // padding-bottom: 21.47vw;
+    padding-bottom: 25vw;
   }
   img {
     width: 100%;
   }
 }
-
-@include media-min($desktop) {
+@include media-min($ipad) {
   .dyptich {
+    padding-left: 12.5vw;
+    padding-right: 12.5vw;
     display: flex;
-    align-items: center;
     flex-direction: row;
     flex-wrap: none;
-    height: 35vw;
-    // margin-bottom: 16vw;
-    padding: 16.667vw 10vw 0 10vw;
   }
   .dyptich__image {
-    width: 35vw;
-    height: auto;
     &.left {
-      padding: 0 10vw 0 0;
+      padding: 0 6.25vw 0 0;
     }
-    &.right {
-      // padding: 0;
-    }
+  } 
+}
+@include media-min($ipad-pro) {
+  .dyptich {
+    padding-left: 8.333vw;
+    padding-right: 8.333vw;
   }
+  .dyptich__image {
+    &.left {
+      padding-right: 8.333vw;
+    }
+  } 
 }
