--- a/src/styles/components/slices/_image_dyptich.scss
+++ b/src/styles/components/slices/_image_dyptich.scss
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: none;
+    justify-content: center;
   }
   .dyptich__image {
     &.left {
