audio slice styles

--- a/src/styles/components/slices/_gallery.scss
+++ b/src/styles/components/slices/_gallery.scss
@@ -1,40 +1,49 @@
-div.header-gallery {
-  overflow: hidden;
-}
-div.gallery {
+.gallery {
   @include slider-base;
+  @include media-vertical-rhythm;
   overflow: hidden;
   ::-webkit-scrollbar {
     display: none !important;
   }
 }
-div.gallery--wrap {
+.gallery--wrap {
   @include slider-wrap;
-  padding: 34.133vw 0 0 20vw;
+  padding-left: 6.25vw;
   img:nth-child(n+2) {
-    margin-left: 8vw;
+    margin-left: 6.25vw;
   }
   img:last-child {
-    padding-right: 20vw;
+    padding-right: 6.25vw;
   }
   ::-webkit-scrollbar {
     display: none !important;
   }
 }
-img.gallery__images{
+.gallery__images{
   scroll-snap-align: center;
   flex-shrink: 0;
-  width: 66.667vw;
+  width: 75vw;
 }
-@include media-min($desktop) {
-  div.gallery--wrap {
-    @include slider-wrap;
-    padding: 16.667vw 0 0 10vw;
+@include media-min($ipad-pro) {
+  .gallery--wrap {
+    padding-left: 16.667vw;
     img:nth-child(n+2) {
-      margin-left: 6.4vw;
+      margin-left: 4.167vw;
     }
     img:last-child {
-      padding-right: 10vw;
+      padding-right: 16.667vw;
     }
   }
+}
+@include media-min($desktop) {
+  // .gallery--wrap {
+  //   @include slider-wrap;
+  //   // padding: 16.667vw 0 0 10vw;
+  //   img:nth-child(n+2) {
+  //     margin-left: 6.4vw;
+  //   }
+  //   img:last-child {
+  //     padding-right: 10vw;
+  //   }
+  // }
 }
