--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,3 +25,4 @@
 @import './components/slices/media_general_slices';
 @import './components/slices/panoramic_slider_slice';
 @import './components/slices/image_dyptich';
+@import './components/slices/audio_slice';
