--- a/src/styles/components/_exhibitions.scss
+++ b/src/styles/components/_exhibitions.scss
@@ -1,16 +1,18 @@
-.work {
+.work > div {
   background-color: $black;
-  padding: 14.4vw 6.4vw;
+  margin: 16.667vw 12.5vw;
+  
+  height: 100%;
 }
 
 @include media-min($ipad-pro) {
   .work {
-    padding: 10vw 10vw;
+    // padding: 10vw 10vw;
   }
 }
 
 @include media-min(1680px) {
   .work {
-    padding: 10vw 14vw;
+    // padding: 10vw 14vw;
   }
 }
