--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,4 +25,5 @@
 @import './components/slices/media_general_slices';
 @import './components/slices/panoramic_slider_slice';
 @import './components/slices/image_dyptich';
+@import './components/slices/text_dyptich';
 @import './components/slices/audio_slice';
