fixed casestudy title copy bottom-padding but

--- a/src/styles/components/slices/_header_slice.scss
+++ b/src/styles/components/slices/_header_slice.scss
@@ -14,7 +14,7 @@
   @include entire-viewport;
   .header-slice__info {
     padding: 6.25vw;
-  #XGb4LBEAAB8AbT4j--titleCopy {
+    h1 {
       padding-bottom: 32px;
     }
   }
