fixed native scrolling parallax interference on touch screens

--- a/src/styles/base/_animations.scss
+++ b/src/styles/base/_animations.scss
@@ -61,12 +61,15 @@
 }
 
 .parallax--wrap {
-  height: 100vh;
+  @include media-min($desktop) {
+    height: 100vh;
   width: 100vw;
   overflow-x: hidden;
   overflow-y: auto;
   perspective: 2px;
   transform-style: preserve-3d;
+  }
+  
 }
 
 // //playing w/ react transition group - 
