--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -37,7 +37,7 @@
 } 
 @mixin h2($color) {
   font-size: 8vw ;
-  line-height: 1.375;
+  line-height: 1.3;
   letter-spacing: -.5px;
   color: $color;
   @include media-min($ipad) {
@@ -45,32 +45,22 @@
   }
   @include media-min($ipad-pro) {
     font-size: 3.333vw;
-    line-height: 1.375;
   }
 }
 
-// @mixin h1($color) {
-//   font-size: 3.6rem;
-//   line-height: 1.5;
-//   color: $color;
-//   @include media-min($ipad) {
-//     font-size: 4.8rem;
-//   }
-// }
-
 @mixin h1($color) {
   font-size: 9.375vw;
-  line-height: 1.375;
+  line-height: 1.3;
   letter-spacing: -.59px;
   color: $color;
   @include media-min($ipad) {
     font-size: 5.5vw;
     letter-spacing: -.5px;
   }
-  @include media-orientation($ipad-pro, 1279px , landscape) {
+  @include media-min($desktop) {
     font-size: 4vw;
   }
-  @include media-min($desktop) {
+  @include media-min($desktop-lrg) {
     font-size: 3.333vw;
   }
 }
@@ -90,21 +80,6 @@
     font-size: 6.667vw;
   }
 }
-
-// @mixin h1-home() {
-//   font-size: 8vw;
-//   line-height: 1.375;
-//   letter-spacing: -.5px;
-//   @include media-min($ipad) {
-//     font-size: 5.5vw;
-//   }
-//   @include media-min($desktop) {
-//     font-size: 3.333vw;
-//   }
-//   @include media-orientation($ipad-pro, 1279px , landscape) {
-//     font-size: 4vw;
-//   }
-// }
 
 //slice layout stuff-------------------------
 
