added bezier to homepage hover

--- a/src/styles/components/_casestudy-featured.scss
+++ b/src/styles/components/_casestudy-featured.scss
@@ -72,11 +72,11 @@
   }
   .casestudy-featured__hero {
     width: 100%;
-    transition: opacity 200ms ease;
+    transition: opacity 200ms cubic-bezier(.26, 0, .34, 1);
   }
   .casestudy-featured__hero:hover {
     opacity: .4;
-    transition: opacity 300ms ease;
+    transition: opacity 200ms cubic-bezier(.26, 0, .34, 1);
   }
   .casestudy-featured__info {
     position: absolute;
