--- a/src/styles/components/_down_arrow.scss
+++ b/src/styles/components/_down_arrow.scss
@@ -1,4 +1,5 @@
 .down-arrow {
+  -webkit-animation: bounce 1.1667s linear 6 800ms;
   animation: bounce 1.1667s linear 6 800ms;
   margin-top: 6px;
 }
